----------------------------------------------------------------------
 OmegaT 1.6.0 RC13 Changes
----------------------------------------------------------------------

1.6.0 RC13 vs. 1.4.5.04
 49 Enchancements
 99 Bugfixes

----------------------------------------------------------------------
PLANNING:
----------------------------------------------------------------------
XLIFF filter won't go into 1.6.0 because it's not fully tested 
at the moment, most probably it will be included into one of bugfix 
releases in 1.6.0 line.

Next "fat" release will be dedicated to terminology management: 
- more glossary formats (at least TBX and CVS), 
- editing glossary from within OmegaT,
- support for online dictionaries (at least WiktionaryZ)

2.0 release will deliver important updates in fuzzy matching, 
solving multiple issues like CPU usage, memory footprint, 
match similarity and match ordering.

----------------------------------------------------------------------
TODO for 1.6.0:
----------------------------------------------------------------------
- Users Guide

----------------------------------------------------------------------
1.6.0 RC13
Contains a form of TMX level 2 export sufficiently compatible with
other CAT tools, and supports regular expression searches.

 Enhancements:

  - Sufficient TMX level 2 support
  [No RFE filed]

  - Alternate translations in TMX files are no longer skipped
  [No RFE filed]

  - Regular expression search
  http://sourceforge.net/support/tracker.php?aid=1506640

 Bugfixes:

  - Multiple instances of OmegaT and log file
  http://sourceforge.net/support/tracker.php?aid=1392639

  - Untranslated segment marked as translated
  http://sourceforge.net/support/tracker.php?aid=1409309

  - Search options persistence
  http://sourceforge.net/support/tracker.php?aid=1447698

  - Match ordering
  http://sourceforge.net/support/tracker.php?aid=1449988

  - [MacOSX] Browsing wrong folders from project properties